<resources>
    <string name="app_name">parko</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="action_search_txt">Search</string>
    <string name="action_acc_settings">Account Settings</string>
    <string name="action_logout_txt">Logout</string>

    <string name="hint_confirm_pwd">Retype Password</string>
    <string name="password_hint">Password</string>
    <string name="forgotPwd_email_hint">Enter your email</string>
    <string name="user_name">Name</string>
    <string name="location_hint">Click on button to go to maps</string>
    <string name="capacity_hint">Parking Capacity</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_account_text">Menaxhimi</string>
    <string name="bottom_notification_text">Rezervimet</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locationHint">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_parking_location">Map</string>
    <string name="lokacioni_help">Zgjedhe lokacionin ne harte</string>
    <string name="capacity_help">Numri i vendeve</string>
    <string name="pname_help">Emri i parkingut</string>
    <string name="hint2hrs">Çmimi për 0 deri në 2 orë</string>
    <string name="hint4hrs">Çmimi për 2 deri në 4 orë</string>
    <string name="hint8hrs">Çmimi për 4 deri në 8 orë</string>
    <string name="hintmt8hrs">Çmimi për çdo orë më shumë se 8 orë</string>
    <string name="title_activity_maps_parkings">Map</string>
    <string-array name="user_types" textColor="#FFFFFF">
        <item>Parking Owner</item>
        <item>Ordinary User</item>
        <item>Parking Worker</item><!--e shtume 16/11/19-->
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="harta_top_menu">HARTA</string>
    <string name="lista_help">LISTA</string>
    <string name="parkingFs_add">Add parking</string>
    <string name="menu_add_empl">Shto/Fshi punetorët</string>
    <string name="onsite_plates_hint">Shkruaj targat e vetures</string>
    <string name="onsite_date_time" />
    <string name="onsite_time_date">Kliko butonin për kohën e hyrjes</string>
    <string name="onsite_title">REZERVIMI NE VENDPARKIM</string>
    <string name="onsite_hint_info">1. Shkruaj targat e veturës, 2.Kliko mbi buton për ta regjistruar kohën e hyrjes, 3.Konfirmo rezervimin</string>
    <string name="onsite_reservation_item_hint">Rezervimi ne vend</string>
    <string name="booking_plates_hint">Shkruaj targat e vetures</string>
    <string name="helper_booking">Shkruani sakte targat e vetures</string>
    <string name="targat_booking">Targat e makines</string>
    <string name="hint_tabelat">Tabelat e vetures</string>
    <string name="hint_date_bk">Zgjedhe daten</string>
    <string name="helper_date">Zgjedhe daten</string>
    <string name="time_hint_bk">Zgjedhe kohen</string>
    <string name="adresa_sakte">Adresa e saktë</string>

</resources>
