<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_acc_settings_btn"
        android:title="@string/action_acc_settings" />
    <item
        android:id="@+id/action_logout_btn"
        android:title="@string/action_logout_txt" />
    <item
        android:id="@+id/parking_addFs_btn"
        android:title="@string/parkingFs_add" />
    <item
        android:id="@+id/onsite_reservation_item"
        android:title="@string/onsite_reservation_item_hint" />
    <item
        android:id="@+id/add_dlt_emps"
        android:title="@string/menu_add_empl" />
    <item
        android:id="@+id/stats_frag"
        android:title="Statistikat" />
</menu>