<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".BookingActivity">

    <Button
        android:id="@+id/date_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="DATA"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/input_date_lt"
        app:layout_constraintTop_toBottomOf="@+id/remote_booking_txt" />

    <Button
        android:id="@+id/time_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_dark"
        android:text="KOHA"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/input_time_lt"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_date_lt"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_date_text"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:hint="@string/helper_date"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/date_picker_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_time_lt"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date_lt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_time_text"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:hint="@string/time_hint_bk"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/time_picker_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_date_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reserve_parking_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/quantum_googgreen"
        android:text="Ruaj rezervimin"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button_checkout_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="check out"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/reserve_parking_btn"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/button_checkin_time"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button_checkin_time"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="160dp"
        android:background="@color/quantum_cyan800"
        android:enabled="true"
        android:text="Shto numrin e rezervimeve"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="370dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:textColorHint="@android:color/white"
        app:helperTextEnabled="false"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_time_lt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plate_number_edit"
            android:layout_width="366dp"
            android:layout_height="48dp"
            android:layout_marginBottom="508dp"
            android:ems="10"
            android:hint="@string/hint_tabelat"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculated_price_text"
            app:layout_constraintVertical_bias="0.0" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/remote_booking_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="Rezervimi i parkingut"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input_date_lt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>